atualizações do pom